test/compilable/diag12658.d
// PERMUTE_ARGS:
// POST_SCRIPT: compilable/diag12658.sh
void main() { }
